# webrtc-rockchip-mpp

./: .gitignore  BETA_SETUP.md  LICENSE  README.md  build_libwebrtc.sh
.github/workflows/: build.yml
docs/: API_MIGRATION.md  ARCHITECTURE.md  UPGRADING.md
patches/: 001-disable-crel.patch
src/: BUILD.gn
src/common/: dmabuf_video_frame_buffer.cc  dmabuf_video_frame_buffer.h
src/decoder/: rockchip_video_decoder.cc  rockchip_video_decoder.h  rockchip_video_decoder_factory.cc  rockchip_video_decoder_factory.h
src/encoder/: rockchip_video_encoder.cc  rockchip_video_encoder.h  rockchip_video_encoder_factory.cc  rockchip_video_encoder_factory.h
